# trading-help

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: release.yml  security-audit.yml
src/: App.css  App.tsx  ThreeBackground.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json
src-tauri/src/: ai_engine.rs  analysis_engine.rs  commands.rs  history_store.rs  keychain.rs  lib.rs  main.rs  market_engine.rs  models.rs  news_engine.rs
